--- a/Research.html
+++ b/Research.html
@@ -14,9 +14,10 @@
   var myChart = new Chart(ctx, {
     type: 'line',
     data: {
-      labels: ['2010', '2011', '2012', '2013', '2014', '2015', '2016', '2017', '2018', '2019', '2020', '2021', '2022', '2023', '2024'],
+      labels: ['2000', '2001', '2002', '2003', '2004', '2005','2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013', '2014', '2015', '2016', '2017', '2018', '2019', '2020', '2021', '2022', '2023', '2024'],
       datasets: [{
-        data:[1.05, 1.04, 0.98, 1, 0.98, 0.95, 0.93, 0.91, 0.89, 0.87, 0.85, 0.84, 0.82, 0.80, 0.79],
+        data:[1.121,	1.029,	1.041,	1.032,	1.115,	1.041,	0.954,	0.91,	1.06,	0.966, 1.047,	1.039,	0.982	,0.995,	0.975,	0.953,	0.932,	0.912,	0.891,	0.872,	0.852,	0.835,	0.818,	0.802,	0.789
+        ],
         label:'Growth Rate',
         borderColor: 'rgba(120, 120, 255, 1)'
       }]
@@ -78,11 +79,10 @@
   var myChart = new Chart(ctx, {
     type: 'bar',
     data: {
-      labels: ['2010', '2011', '2012', '2013', '2014', '2015', '2016', '2017', '2018', '2019', '2020', '2021', '2022', '2023', '2024'],
+      labels: ['2000', '2001', '2002', '2003', '2004', '2005','2006', '2007', '2008', '2009', '2010', '2011', '2012', '2013', '2014', '2015', '2016', '2017', '2018', '2019', '2020', '2021', '2022', '2023', '2024'],
       datasets: [{
         label:'Total Population',
-        data: [41358093,	41791721,	42216144,	42635451,	43057355, 43474406,	43886223,	44292731,	44693790,	45089449,	45479650,	45864941,	46245668,	46621847,	46994384
-        ],
+        data: [37335675,	37739190,	38131971,	38529402,	38945354,	39367281,	39761782,	40134011,	40531409,	40943942,	41358093,	41791721,	42216144,	42635451,	43057355,	43474406,	43886223,	44292731,	44693790,	45089449,	45479650	,45864941	,46245668,	46621847	,46994384],
         backgroundColor: [
           'rgba(0, 0, 255, 0.2)',
         ],
